--- a/harley.html
+++ b/harley.html
@@ -52,7 +52,9 @@
 	</div>
 	<div class="category" id="harley">
 		<div class="title">
-				<img src="img/title/title-12.png">
+				<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-12.png"/><img src="img/title/title-12.png">
+			</picture>
 		</div>
 			<div class="colors">
 				<div class="colors-items">
@@ -112,7 +114,7 @@
 					<li>HC 9090*****</li>
 					<li>Snake Venom</li>
 					<li>warna dasar 9109 BLACK</li>
-					<li><p>Snake Venom</p> menggunakan pigmen khusus sehingga memberikan <p>super efek yang mewah</p>, untuk hasil mengkilap gunakan 9128 Clear Gloss.</li>
+					<p><span>Snake Venom</span> menggunakan pigmen khusus sehingga memberikan <span>super efek yang mewah</span>, untuk hasil mengkilap gunakan 9128 Clear Gloss.</p>
 				</ul>
 				</div>
 			</div>
