--- a/honda.html
+++ b/honda.html
@@ -52,7 +52,9 @@
 	</div>
 	<div class="category" id="honda">
 		<div class="title">
-				<img src="img/title/title-6.png">
+				<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-6.png"/><img src="img/title/title-6.png">
+			</picture>
 			</div>
 			<div class="colors">
 				
