--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="category" id="solid">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-1.png"/><img src="img/title/title-1.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-1.png"/><img src="img/title/title-1.png">
 			</picture>
 		</div>
 		<div class="colors">
@@ -196,7 +196,7 @@
 	<div class="category" id="metallic">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-2.png"/><img src="img/title/title-2.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-2.png"/><img src="img/title/title-2.png">
 			</picture>
 			<div class="colors">
 				<a href="metallic.html">
@@ -254,7 +254,7 @@
 	<div class="category" id="candytone">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-3.png"/><img src="img/title/title-3.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-3.png"/><img src="img/title/title-3.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -321,42 +321,42 @@
 	<div class="category" id="clear">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-4.png"/><img src="img/title/title-4.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-4.png"/><img src="img/title/title-4.png">
 			</picture>
 			</div>
-			<div class="colors">
+		<div class="colors">
 				<a href="clear.html">
-				<div class="colors-items putih">
-				<ul>
+			<div class="colors-items putih">
+				<ul >
 					<img src="img/colors/Clear/clear gloss.png">
 					<li>9128</li>
 					<li>CLEAR GLOSS <br>+ACTIVATOR</li>
-					<li>  Untuk hasil warna kilap gunakan CLEAR GLOSS 9128</li>
+					<li>Untuk hasil warna kilap gunakan CLEAR GLOSS 9128</li>
 				</ul>
-				</div>
+			</div>
 				</a>
-				<div class="colors-items putih">
+			<div class="colors-items putih">
 				<ul>
 					<img src="img/colors/Clear/clear semi doff.png">
 					<li>9129</li>
 					<li>CLEAR SEMI DOFF</li>
-					<li>  Untuk hasil warna semi doff gunakan CLEAR SEMI DOFF 9129</li>
+					<li>Untuk hasil warna semi doff gunakan CLEAR SEMI DOFF 9129</li>
 				</ul>
-				</div>
-				<div class="colors-items putih">
+			</div>
+			<div class="colors-items putih">
 				<ul>
 					<img src="img/colors/Clear/clear doff.png">
 					<li>9130</li>
 					<li>CLEAR DOFF</li>
-					<li>  Untuk hasil warna doff gunakan CLEAR DOFF 9130</li>
+					<li>Untuk hasil warna doff gunakan CLEAR DOFF 9130</li>
 				</ul>
-				</div>
+			</div>
 			</div>
 	</div>
 	<div class="category" id="fluorescent">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-5.png"/><img src="img/title/title-5.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-5.png"/><img src="img/title/title-5.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -410,7 +410,7 @@
 	<div class="category" id="honda">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-6.png"/><img src="img/title/title-6.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-6.png"/><img src="img/title/title-6.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -566,7 +566,7 @@
 	<div class="category" id="yamaha">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-7.png"/><img src="img/title/title-7.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-7.png"/><img src="img/title/title-7.png">
 			</picture>
 		</div>
 			<div class="colors">
@@ -674,7 +674,7 @@
 		<div class="category" id="kawasaki">
 			<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-8.png"/><img src="img/title/title-8.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-8.png"/><img src="img/title/title-8.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -699,7 +699,7 @@
 		<div class="category" id="suzuki">
 			<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-9.png"/><img src="img/title/title-9.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-9.png"/><img src="img/title/title-9.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -725,7 +725,7 @@
 	<div class="category" id="velg">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-10.png"/><img src="img/title/title-10.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-10.png"/><img src="img/title/title-10.png">
 			</picture>
 		</div>
 			<div class="colors">
@@ -806,7 +806,7 @@
 	<div class="category" id="pearl">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-11.png"/><img src="img/title/title-11.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-11.png"/><img src="img/title/title-11.png">
 			</picture>
 		</div>
 			<div class="colors">
@@ -845,7 +845,7 @@
 	<div class="category" id="harley">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-12.png"/><img src="img/title/title-12.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-12.png"/><img src="img/title/title-12.png">
 			</picture>
 		</div>
 			<div class="colors">
@@ -908,7 +908,7 @@
 					<li>HC 9090*****</li>
 					<li>Snake Venom</li>
 					<li>warna dasar 9109 BLACK</li>
-					<li><p>Snake Venom</p> menggunakan pigmen khusus sehingga memberikan <p>super efek yang mewah</p>, untuk hasil mengkilap gunakan 9128 Clear Gloss.</li>
+					<p><span>Snake Venom</span> menggunakan pigmen khusus sehingga memberikan <span>super efek yang mewah</span>, untuk hasil mengkilap gunakan 9128 Clear Gloss.</p>
 				</ul>
 				</div>
 			</div>
@@ -916,7 +916,7 @@
 	<div class="category" id="vespa">
 			<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-13.png"/><img src="img/title/title-13.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-13.png"/><img src="img/title/title-13.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -1087,7 +1087,7 @@
 	<div class="category" id="xirallic">
 			<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-14.png"/><img src="img/title/title-14.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-14.png"/><img src="img/title/title-14.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -1159,11 +1159,11 @@
 				</div>
 			</div>
 	</div>
-	<div class="container container-category">
+	<div class="container container-category1">
 		<div class="category" id="hi-temp">
 			<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-15.png"/><img src="img/title/title-16.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-15.png"/><img src="img/title/title-16.png">
 			</picture>
 			</div>
 			<div class="colors">
@@ -1193,8 +1193,8 @@
 			</div>
 		</div>
 		<div class="category1">
+			<div class="card ">
 		<a href="special.html">
-			<div class="colors-items ">
 				<div id="special">UNDERCOAT</div>
 				<ul>
 					<img src="img/colors/Flinkote/Flintkote Special Anti Karat.png">
@@ -1203,9 +1203,9 @@
 					<li></li>
 					<li>Bersihkan media dari debu, minyak & Karat. Semprotkan Diton Flintkote tanpa warna dasar.</li>
 				</ul>
-			</div>
 		</a>
-			<div class="colors-items ">
+			</div>
+			<div class="card ">
 				<div id="special">CHROME</div>
 				<ul>
 					<img src="img/colors/Special Color/Chrome.png">
@@ -1215,7 +1215,7 @@
 					<li id="warning">Jangan di Clear</li>
 				</ul>
 			</div>
-			<div class="colors-items ">
+			<div class="card ">
 				<div id="special">SPECIAL COLOR</div>
 				<ul>
 					<img src="img/colors/Special Color/Rose Gold.png">
@@ -1225,7 +1225,7 @@
 					<li>Untuk hasil mengkilap gunakan Clear Gloss 9128</li>
 				</ul>
 			</div>
-			<div class="colors-items ">
+			<div class="card ">
 				<div id="special">HOLLOGRAM EFFECT</div>
 				<ul>
 					<img src="img/colors/Special Color/Glitter Hollogram.png">
@@ -1240,7 +1240,7 @@
 	<div class="category" id="primer coat">
 		<div class="title">
 				<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-16.png"/><img src="img/title/title-15.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-16.png"/><img src="img/title/title-15.png">
 			</picture>
 		</div>
 		<div class="colors">
@@ -1265,7 +1265,7 @@
 	<div class="category" id="bunglon">
 		<div class="title">
 			<picture>
-				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-17.png"/><img src="img/title/title-17.png">
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-17.png"/><img src="img/title/title-17.png">
 			</picture>
 		</div>
 		<div class="colors">
