--- a/list.html
+++ b/list.html
@@ -51,7 +51,10 @@
 		</div>
 	</div>
 	<div class="category" id="solid">
-		<div class="title"><img src="img/title/title-1.png"></div>
+		<div class="title">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-1.png"/><img src="img/title/title-1.png">
+			</picture></div>
 		<div class="colors">
 				<a href="#">
 				<div class="colors-items">
