--- a/special.html
+++ b/special.html
@@ -51,7 +51,9 @@
 		</div>
 	</div>
 	<div class="container-category1">
-	<div class="colors-items ">
+	<div class="category1">
+			<div class="card ">
+		<a href="special.html">
 				<div id="special">UNDERCOAT</div>
 				<ul>
 					<img src="img/colors/Flinkote/Flintkote Special Anti Karat.png">
@@ -60,8 +62,9 @@
 					<li></li>
 					<li>Bersihkan media dari debu, minyak & Karat. Semprotkan Diton Flintkote tanpa warna dasar.</li>
 				</ul>
+		</a>
 			</div>
-			<div class="colors-items ">
+			<div class="card ">
 				<div id="special">CHROME</div>
 				<ul>
 					<img src="img/colors/Special Color/Chrome.png">
@@ -71,7 +74,7 @@
 					<li id="warning">Jangan di Clear</li>
 				</ul>
 			</div>
-			<div class="colors-items ">
+			<div class="card ">
 				<div id="special">SPECIAL COLOR</div>
 				<ul>
 					<img src="img/colors/Special Color/Rose Gold.png">
@@ -81,7 +84,7 @@
 					<li>Untuk hasil mengkilap gunakan Clear Gloss 9128</li>
 				</ul>
 			</div>
-			<div class="colors-items ">
+			<div class="card ">
 				<div id="special">HOLLOGRAM EFFECT</div>
 				<ul>
 					<img src="img/colors/Special Color/Glitter Hollogram.png">
@@ -91,7 +94,7 @@
 					<li>Semprotkan sebanyak 2-3 lapis pada warna yang diinginkan</li>
 				</ul>
 			</div>
-	</div>
+		</div>
 	<div class="btn-group">
 		<div class="play">	
 			<i class="fa-solid fa-circle-play fa-2xl"></i>
