--- a/vespa.html
+++ b/vespa.html
@@ -52,7 +52,9 @@
 	</div>
 	<div class="category" id="vespa">
 			<div class="title">
-				<img src="img/title/title-13.png">
+				<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-13.png"/><img src="img/title/title-13.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<div class="colors-items">
@@ -224,7 +226,7 @@
 		<hr>
 		<a href="index.html#vespa">
 		<div class="back">
-			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" >
+			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="black" fill="none" stroke-linecap="round" stroke-linejoin="round" >
 	   		<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
 	   		<path d="M9 14l-4 -4l4 -4"></path>
 	  		 <path d="M5 10h11a4 4 0 1 1 0 8h-1"></path>
