--- a/hi temp.html
+++ b/hi temp.html
@@ -52,7 +52,9 @@
 	</div>
 	<div class="category" id="hi-temp">
 			<div class="title">
-				<img src="img/title/title-16.png">
+				<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-15.png"/><img src="img/title/title-16.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<div class="colors-items">
