--- a/kawasaki.html
+++ b/kawasaki.html
@@ -52,7 +52,9 @@
 	</div>
 	<div class="category" id="kawasaki">
 			<div class="title">
-				<img src="img/title/title-8.png">
+				<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-8.png"/><img src="img/title/title-8.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<div class="colors-items">
