--- a/metallic.html
+++ b/metallic.html
@@ -52,7 +52,9 @@
 	</div>
 	<div class="category" id="metallic">
 		<div class="title">
-			<img src="img/title/title-2.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-2.png"/><img src="img/title/title-2.png">
+			</picture>
 			<div class="colors">
 				<div class="colors-items">
 				<ul>
