--- a/yamaha.html
+++ b/yamaha.html
@@ -52,7 +52,9 @@
 	</div>
 	<div class="category" id="yamaha">
 		<div class="title">
-				<img src="img/title/title-7.png">
+				<picture>
+				<source media="(min-width: 320px) and (max-width: 1024px)" srcset="img/title-mobile/title-7.png"/><img src="img/title/title-7.png">
+			</picture>
 		</div>
 			<div class="colors">
 				
